--- a/Public/dashboard/metricas.html
+++ b/Public/dashboard/metricas.html
@@ -8,7 +8,7 @@
     <title>Photograph | Metricas</title>
 </head>
 
-<body onload="mostrarGrafico()">
+<body onload="mostrarGraficos()">
     <nav id="navbar">
         <a onclick="limparSessaohome()" href="../dashboard/dashSite.html"><img id="logo"
                 src="../assets/index/LogoBlack.png" alt="LogoBlack"></a>
@@ -59,7 +59,7 @@
 </body>
 
 </html>
-<script>s
+<script>
 
     var idUsuario = sessionStorage.ID_USUARIO;
 
