API e graficos funcionais

--- a/Public/dashboard/Game.html
+++ b/Public/dashboard/Game.html
@@ -28,8 +28,8 @@
             <li class="dropdown2"> <a>Games</a>
 
                 <div class="dropdown-menu2">
-                    <a href="../dashboard/Game.html">Quiz Fotografia iniciante</a>
-                    <a href="../dashboard/GameExperiente.html">Quiz Fotografia experiente</a>
+                    <a href="../dashboard/Game.html">Quiz iniciante</a>
+                    <a href="../dashboard/GameExperiente.html">Quiz experiente</a>
 
                 </div>
 
@@ -47,7 +47,7 @@
     <div class="geral">
 
         <div id="content" class="content">
-            <h3>Quiz - Fotografia</h3>
+            <h3>Quiz - Fotografia Iniciante</h3>
 
             <p>Bem vindo! ao nosso Quiz
                 <br>
@@ -205,7 +205,6 @@
 </body>
 <script>
 
-    const lista_pontos = [];
     var pontos = 0;
     var pontoFinal = 0;
     var erro = 0;
@@ -439,52 +438,41 @@
     }
 
     function finalizar() {
-        lista_pontos.push(pontos);
-
-        pontoFinal += pontos * 10
+        pontoFinal = pontos * 10
         acertos = pontos;
         erro = pontos - 10;
-
-
-        window.location.href = "GameExperiente.html";
-        pontuacao1();
 
         if (pontos >= 100) {
             alert("Parabéns, você acertou todas as questões!");
         } else {
-            alert("Seu score " + (100 - pontos) + "pontos");
+            alert("Seu score " + (10 - pontos) + "perguntas");
         }
+
+        fetch("/score/aplicarI", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
+            },
+            body: JSON.stringify({
+                pontoServer: pontoFinal,
+                acertoServer: acertos,
+                erroServer: erro,
+                usuarioServer: idUsuario
+            }),
+            
+        }).then(response => {
+            if (response.ok) {
+                console.log('Pontos cadastrados com sucesso!');
+
+                window.location.href = "metricas.html";
+            } else {
+                console.error('Erro ao cadastrar os dados.');
+            }
+        }).catch(error => {
+            console.error('Erro ao enviar a requisição:', error);
+        });
     }
 
-
-    function pontuacao1() {
-
-        gameTimeout = setTimeout(() => {
-            fetch("/score/aplicarI", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify({
-                    acertoServer: acertos,
-                    erroServer: erro,
-                    PontoServer: lista_pontos[idUsuario],
-                    usuarioServer: idUsuario
-                }),
-            }).then(response => {
-                if (response.ok) {
-
-                    console.log('Pontos cadastrados com sucesso!');
-                } else {
-                    console.error('Erro ao cadastrar .');
-                }
-            }).catch(error => {
-                console.error('Erro ao enviar a requisição:', error);
-            });
-
-
-        }, 45000); // 60 segundos
-    }
 </script>
 
 </html>
