--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -5,19 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Photograph | Cadastro</title>
-
   <script src="./js/sessao.js"></script>
+  <link rel="stylesheet" href="./css/cadastro.css" />
 
-  <link rel="stylesheet" href="./css/estilo.css" />
-  <link rel="icon" href="./assets/icon/favicon2.ico" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
 <body>
 
-  <div class="login">
+  <!-- <div class="login">
     <div class="container">
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
@@ -25,7 +21,7 @@
 
 
           <div class="campo">
-            <span>Nome:</span>
+            <label for="nome_input" >Nome:</label>
             <input id="nome_input" type="text" placeholder="Seu nome" required />
           </div>
           <div class="campo">
@@ -35,53 +31,160 @@
           <div class="senhas">
             <div class="campoSenha">
               <span>Senha:</span>
-              <input id="senha_input" type="password" placeholder="*****************" required />
+              <input id="senha_input" onload="verificar()" type="password" placeholder="*****************" required />
+              <p id="alertaSenha"></p>
             </div>
             <div class="campoSenha2">
               <span>Confirmação da Senha:</span>
               <input id="confirmacao_senha_input" type="password" placeholder="*****************" required />
+              <p id="alertaConfirmacao"></p>
             </div>
           </div>
           <button class="botao" onclick="cadastrar()">Cadastrar</button>
         </div>
-        <div id="loaderCad" class="loaderCad">
-          <div class="dot1"></div>
-          <div class="dot1"></div>
-          <div class="dot1"></div>
-          <div class="dot1"></div>
-          <div class="dot1"></div>
-        </div>
+       
+      </div>
+    </div>
+  </div> -->
+
+  <div>
+    <!-- entrada de dados e primeira parte da tela inserção 27/07/24 -->
+    <div class="content1">
+      <div>
+        <label for="nome_input">Nome</label>
+        <input id="nome_input" placeholder="Ex. João" type="text">
+        <p></p>
+      </div>
+      <div>
+        <label for="sobremenome_input">Sobrenome</label>
+        <input id="sobremenome_input" placeholder="Ex. Marques" type="text">
+        <p></p>
+      </div>
+      <div>
+        <!-- botões de interatividade - inserção 27/07/24-->
+        <button>Próxima</button>
+        <button>Cancelar</button>
+      </div>
+    </div>
+    <div class="content2">
+      <div>
+        <label for="email_input">E-mail</label>
+        <input id="email_input" placeholder="Ex. joao@email.com" type="email">
+        <p></p>
+      </div>
+      <div>
+        <label for="emailConfirmacao_input">Confirmação E-mail</label>
+        <input id="emailConfirmacao_input" placeholder="Ex. joao@email.com" type="email">
+        <p></p>
+      </div>
+      <div>
+        <button>Proxima</button>
+        <button>Voltar</button>
+      </div>
+    </div>
+    <div class="content3">
+      <div>
+        <label for="senha_input">Senha</label>
+        <input id="senha_input" placeholder=" ********** " type="password">
+      </div>
+      <div>
+
+        <li>
+          <i></i>
+          <span>Pelo menos 8 caracteres</span>
+        </li>
+        <li>
+          <i></i>
+          <span>1 letra maiúscula (a...z)</span>
+        </li>
+        <li>
+          <i></i>
+          <span>1 minúscula (A...Z)</span>
+        </li>
+        <li>
+          <i></i>
+          <span>Pelo menos 1 número (0-9)</span>
+        </li>
+        <li>
+          <i></i>
+          <span>conter pelo menos um caractere especial. (!...&)</span>
+        </li>
+      </div>
+      <div>
+        <label for="confirmacao_senha_input">Confirmação da Senha</label>
+        <input id="confirmacao_senha_input" placeholder=" ********** " type="text">
+      </div>
+      <div>
+        <button>Cadastrar</button>
+        <button>Cancelar</button>
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
 
 <script>
+
+  // declarando a variavel para pegar o elemento em HTML - inserção 27/07/24
+  let ConfiSenha = document.getElementById('senha_input');
+
+  function verificar() {
+
+    senha = document.getElementById('senha_input').value;
+    // verifica se a senha tem uma letra maiúcula de A até Z - inserção 27/07/24
+    let maiuscula = /[A-Z]/.test(senha);
+    // verifica se a senha tem uma letra minúscula de a até z - inserção 27/07/24
+    let minuscula = /[a-z]/.test(senha);
+    // verifica se a senha tem um número de 0 até 9 - inserção 27/07/24
+    let num = /[0-9]/.test(senha);
+    // verifica se a senha tem um caractere especial - inserção 27/07/24
+    let especial = /[!@#$&]+/.test(senha);
+    // verifica se a senha tem pelo menos 8 caracteres - inserção 27/07/24
+    let tamanho = senha.length >= 8;
+
+    // validações dos caracteres da senha inserção - 27/07/24
+    if (maiuscula === false) {
+      alertaSenha.innerText = "A senha deve conter pelo menos uma letra maiúscula.";
+    } else if (minuscula === false) {
+      alertaSenha.innerText = "A senha deve conter pelo menos uma letra minúscula.";
+    } else if (num === false) {
+      alertaSenha.innerText = "A senha deve conter pelo menos um número.";
+    } else if (especial === false) {
+      alertaSenha.innerText = "A senha deve conter pelo menos um caractere especial.";
+    } else if (tamanho === false) {
+      alertaSenha.innerText = "A senha deve ter no mínimo 8 caracteres.";
+    } else {
+      alertaSenha.innerText = "Confere";
+    }
+  }
+
+  //a cada vez que a input tiver uma mudança, ele chama a função verificar - inserção 27/07/24  
+  ConfSenha.addEventListener('input', verificar)
+
+
   function cadastrar() {
+    // declarando variáveis para o cadastro inserção 12/06/24
+    let nomeCad = nome_input.value;
+    let emailCad = email_input.value;
+    let senhaCad = senha_input.value;
+    let confirmacaosenhaCad = confirmacao_senha_input.value;
 
-    //Recupere o valor da nova input pelo nome do id
-    // Agora vá para o método fetch logo abaixo
-    var nomeCad = nome_input.value;
-    var emailCad = email_input.value;
-    var senhaCad = senha_input.value;
-    var confirmacaosenhaCad = confirmacao_senha_input.value;
-
+    // verificações para o cadastro, vendo se os campos estão preechidos inserção 27/07/24
     if (
       nomeCad == "" ||
       emailCad == "" ||
       senhaCad == "" ||
       confirmacaosenhaCad == ""
     ) {
-      // finalizarAguardar()
-      alert("preencha os campos corretamente")
+      alertaSenha.innerText = "preencha os campos corretamente"
     } else {
-      if (senhaCad != confirmacaosenhaCad) {
-        alert("Senhas diferentes!")
-        // finalizarAguardar();
-        return false;
+
+      if (verificarSenha() == true) {
+
       }
+
 
       // Enviando o valor da nova input
       fetch("/usuarios/cadastrar", {
@@ -122,4 +225,5 @@
       return false;
     }
   }
+
 </script>
