--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -8,115 +8,99 @@
   <title>Photograph | Cadastro</title>
   <script src="./js/sessao.js"></script>
   <link rel="stylesheet" href="./css/cadastro.css" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200..1000&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- <div class="login">
-    <div class="container">
-      <div class="card card-cadastro">
-        <h2>Bem-vindo!</h2>
-        <div class="formulario">
+  <div class="content">
+    <div class="primeiro">
+      <!-- entrada de dados e primeira parte da tela inserção 25/07/24  -->
+      <div class="content1">
+        <h1>SEJA BEM-VINDO!</h1>
+        <h3>Primeiro acesso, insira os dados:</h3>
+        <div>
 
+          <input id="nome_input" placeholder="Nome*" type="text" required>
+          <p id="alerta1" class="alerta"></p>
 
-          <div class="campo">
-            <label for="nome_input" >Nome:</label>
-            <input id="nome_input" type="text" placeholder="Seu nome" required />
-          </div>
-          <div class="campo">
-            <span>E-mail:</span>
-            <input id="email_input" type="text" placeholder="meuemail@provedor.com" required />
-          </div>
-          <div class="senhas">
-            <div class="campoSenha">
-              <span>Senha:</span>
-              <input id="senha_input" onload="verificar()" type="password" placeholder="*****************" required />
-              <p id="alertaSenha"></p>
-            </div>
-            <div class="campoSenha2">
-              <span>Confirmação da Senha:</span>
-              <input id="confirmacao_senha_input" type="password" placeholder="*****************" required />
-              <p id="alertaConfirmacao"></p>
-            </div>
-          </div>
-          <button class="botao" onclick="cadastrar()">Cadastrar</button>
+          <input id="sobrenome_input" placeholder="Sobrenome*" type="text" required>
+          <p id="alerta2" class="alerta"></p>
         </div>
-       
+        <div>
+          <!-- botões de interatividade usando parametros - alteração 26/07/24 -->
+          <button onclick="cancelar(1)" class="Voltar">Cancelar</button>
+          <button onclick="proxima(1)" class="proxima1">Próxima</button>
+        </div>
       </div>
     </div>
-  </div> -->
+    <div class="segundo">
+      <div class="content1">
+        <h1>SEJA BEM-VINDO!</h1>
+        <h3>Primeiro acesso, insira os dados:</h3>
+        <div>
 
-  <div>
-    <!-- entrada de dados e primeira parte da tela inserção 27/07/24 -->
-    <div class="content1">
-      <div>
-        <label for="nome_input">Nome</label>
-        <input id="nome_input" placeholder="Ex. João" type="text">
-        <p></p>
-      </div>
-      <div>
-        <label for="sobremenome_input">Sobrenome</label>
-        <input id="sobremenome_input" placeholder="Ex. Marques" type="text">
-        <p></p>
-      </div>
-      <div>
-        <!-- botões de interatividade - inserção 27/07/24-->
-        <button>Próxima</button>
-        <button>Cancelar</button>
-      </div>
-    </div>
-    <div class="content2">
-      <div>
-        <label for="email_input">E-mail</label>
-        <input id="email_input" placeholder="Ex. joao@email.com" type="email">
-        <p></p>
-      </div>
-      <div>
-        <label for="emailConfirmacao_input">Confirmação E-mail</label>
-        <input id="emailConfirmacao_input" placeholder="Ex. joao@email.com" type="email">
-        <p></p>
-      </div>
-      <div>
-        <button>Proxima</button>
-        <button>Voltar</button>
-      </div>
-    </div>
-    <div class="content3">
-      <div>
-        <label for="senha_input">Senha</label>
-        <input id="senha_input" placeholder=" ********** " type="password">
-      </div>
-      <div>
+          <input id="email_input" placeholder="E-mail*" type="email" required>
+          <p id="alerta3" class="alerta"></p>
+        </div>
+        <div>
 
-        <li>
-          <i></i>
-          <span>Pelo menos 8 caracteres</span>
-        </li>
-        <li>
-          <i></i>
-          <span>1 letra maiúscula (a...z)</span>
-        </li>
-        <li>
-          <i></i>
-          <span>1 minúscula (A...Z)</span>
-        </li>
-        <li>
-          <i></i>
-          <span>Pelo menos 1 número (0-9)</span>
-        </li>
-        <li>
-          <i></i>
-          <span>conter pelo menos um caractere especial. (!...&)</span>
-        </li>
+          <input id="emailConfirmacao_input" placeholder="Confirme seu E-mail*" type="email" required>
+          <p id="alerta4" class="alerta"></p>
+        </div>
+        <div>
+          <!-- botões que para voltar e avançar para tela seguinte - inserção 26/07/24 -->
+          <button onclick="cancelar(2)" class="cancelar1">Voltar</button>
+          <button onclick="proxima(2)" class="proxima2">Proxima</button>
+        </div>
       </div>
-      <div>
-        <label for="confirmacao_senha_input">Confirmação da Senha</label>
-        <input id="confirmacao_senha_input" placeholder=" ********** " type="text">
-      </div>
-      <div>
-        <button>Cadastrar</button>
-        <button>Cancelar</button>
+    </div>
+    <div class="terceiro">
+      <div class="content1">
+        <h1>SEJA BEM-VINDO!</h1>
+        <h3>Primeiro acesso, insira os dados:</h3>
+        <div>
+
+          <input id="senha_input" placeholder="Senha *" type="text">
+          <p id="alerta5" class="alerta"></p>
+        </div>
+        <div class="verificacao">
+
+          <!-- textos de verificação para a senha alteração 26/07/24 -->
+
+          <li>
+            <span id="aviso1">Conter pelo menos 8 caracteres</span>
+          </li>
+          <li>
+
+            <span id="aviso2">conter pelo menos uma letra maiúscula (A...Z)</span>
+          </li>
+          <li>
+
+            <span id="aviso3">conter pelo menos uma letra minúscula (a...z) </span>
+          </li>
+          <li>
+
+            <span id="aviso4">conter pelo menos um número (0-9)</span>
+          </li>
+          <li>
+
+            <span id="aviso5">conter pelo menos um caractere especial. (! @ # $ &)</span>
+          </li>
+        </div>
+        <div>
+
+          <input id="confirmacao_senha_input" placeholder="Confirme sua Senha *" type="text">
+          <p id="alerta6" class="alerta"></p>
+
+        </div>
+        <div>
+          <button onclick="cancelar(3)" class="Voltar">Cancelar</button>
+          <button onclick="proxima(3)" class="proxima2">Cadastrar</button>
+        </div>
       </div>
     </div>
   </div>
@@ -127,64 +111,230 @@
 
 <script>
 
-  // declarando a variavel para pegar o elemento em HTML - inserção 27/07/24
-  let ConfiSenha = document.getElementById('senha_input');
+  // função que faz a troca de todas as telas usando parametros - inserção 26/07/24
+
+  function proxima(resposta) {
+
+    // declarando as inputs - inserção 26/07/24
+
+    let nome = nome_input.value;
+    let sobrenome = sobrenome_input.value;
+    let email = email_input.value;
+    let confirmacaoEmmail = emailConfirmacao_input.value;
+    let senha = senha_input.value;
+    let confirmacaoSenha = confirmacao_senha_input.value;
+
+    // o sistema funciona de uma forma simples onde o botão vem com o parametro indicando em qual tela ele está e indicando para onde ele deve ir depois
+    // e dentro de cada tela cada campo tem sua própria verificação para ter uma maior segurança - inserção 26/07/24
+
+
+    if (resposta === 1) {
+
+      // validações da primeira tela - inserção 26/07/24
+
+      if (nome == '') {
+
+        alerta1.innerHTML = "Preencha o campo nome!"
+
+        setTimeout(function () {
+          alerta1.innerHTML = '';
+        }, 2000);
+
+      } else if (sobrenome == '') {
+        alerta2.innerHTML = "Preencha o campo sobrenome!"
+
+        setTimeout(function () {
+          alerta2.innerHTML = '';
+        }, 1500);
+      } else if (nome.length <= 2) {
+
+        alerta1.innerHTML = "O nome deve conter mais de 2 caracteres!"
+
+        setTimeout(function () {
+          alerta1.innerHTML = '';
+        }, 1500);
+
+      } else if (sobrenome.length <= 2) {
+
+        alerta2.innerHTML = "O sobrenome deve conter mais de 2 caracteres!"
+
+        setTimeout(function () {
+          alerta2.innerHTML = '';
+        }, 1500);
+
+      } else {
+
+        document.querySelector('.primeiro').style.display = 'none';
+        document.querySelector('.segundo').style.display = 'flex';
+
+      };
+
+    } else if (resposta === 2) {
+
+      // validações da segunda tela - inserção 26/07/24
+
+      if (email == '') {
+
+        alerta3.innerHTML = "Preencha o campo E-mail!"
+
+        setTimeout(function () {
+          alerta3.innerHTML = '';
+        }, 1500);
+
+      } else if (confirmacaoEmmail == '') {
+
+        alerta4.innerHTML = "Preencha o campo confirmar E-mail!"
+
+        setTimeout(function () {
+          alerta4.innerHTML = '';
+        }, 1500);
+
+      } else if (email.indexOf('@') == -1 || email.indexOf('.com') == -1) {
+
+        alerta3.innerHTML = "Digite um E-mail válido!"
+
+        setTimeout(function () {
+          alerta3.innerHTML = '';
+        }, 1500);
+
+      } else if (email !== confirmacaoEmmail) {
+
+        alerta4.innerHTML = "Os E-mails não conferem!"
+
+        setTimeout(function () {
+          alerta4.innerHTML = '';
+        }, 1500);
+
+      } else {
+
+        document.querySelector('.segundo').style.display = 'none';
+        document.querySelector('.terceiro').style.display = 'flex';
+
+      };
+
+    } else if (resposta === 3) {
+
+      // validações da terceira tela - inserção 26/07/24
+
+      if (senha == '') {
+
+        alerta5.innerHTML = "Preencha o campo senha!"
+
+        setTimeout(function () {
+          alerta5.innerHTML = '';
+        }, 1500);
+
+      } else if (confirmacaoSenha == '') {
+
+        alerta6.innerHTML = "Preencha o campo Confirmação de Campo!"
+
+        setTimeout(function () {
+          alerta6.innerHTML = '';
+        }, 1500);
+
+      } else if (senha != confirmacaoSenha) {
+
+        alerta6.innerHTML = "As senhas não conferem!"
+
+      } else {
+
+        // caso todas as verificações batam com os if e elses ele chama a função cadastrar passando um parametro de aprovação 
+
+        cadastrar(1);
+
+      }
+
+    }
+  }
+
+  // função para o usuario poder ir e voltar durante seu cadastro - inserção 26/07/24
+
+  function cancelar(resposta) {
+
+    // usando para dar uma maior segunrança eu usei um confirm para poder ajudar o usuario a ter certeza do que ele quer escolher - inserção 26/07/24
+    // passei parametros para indicar em qual tela ele está e para onde ele deve ir - inserção 26/07/24
+
+    if (resposta === 1) {
+
+      if (confirm('Deseja cancelar? Você será redirecionado para a página inicial')) {
+
+        window.location = 'index.html'
+
+      } else {
+
+      }
+
+    } else if (resposta === 2) {
+
+      // troca de telas - inserção 26/07/24
+
+      document.querySelector('.segundo').style.display = 'none';
+      document.querySelector('.primeiro').style.display = 'flex';
+
+    } else if (resposta === 3) {
+
+      if (confirm('Deseja cancelar? Você terá que preencher novamente os dados')) {
+
+        window.location = 'index.html'
+
+      } else {
+
+      }
+
+    }
+
+  }
+
+  let ax = 0
+  // declarando a variavel para pegar o elemento em HTML - inserção 25/07/24
+  let VerificarSenha = document.getElementById('senha_input');
 
   function verificar() {
 
     senha = document.getElementById('senha_input').value;
-    // verifica se a senha tem uma letra maiúcula de A até Z - inserção 27/07/24
+    // verifica se a senha tem uma letra maiúcula de A até Z - inserção 25/07/24
     let maiuscula = /[A-Z]/.test(senha);
-    // verifica se a senha tem uma letra minúscula de a até z - inserção 27/07/24
+    // verifica se a senha tem uma letra minúscula de a até z - inserção 25/07/24
     let minuscula = /[a-z]/.test(senha);
-    // verifica se a senha tem um número de 0 até 9 - inserção 27/07/24
+    // verifica se a senha tem um número de 0 até 9 - inserção 25/07/24
     let num = /[0-9]/.test(senha);
-    // verifica se a senha tem um caractere especial - inserção 27/07/24
-    let especial = /[!@#$&]+/.test(senha);
-    // verifica se a senha tem pelo menos 8 caracteres - inserção 27/07/24
-    let tamanho = senha.length >= 8;
+    // verifica se a senha tem um caractere especial - inserção 25/07/24
+    let especial = /[!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?]+/.test(senha);
+    // verifica se a senha tem pelo menos 8 caracteres - inserção 25/07/24
+    let tamanho = 8;
 
-    // validações dos caracteres da senha inserção - 27/07/24
-    if (maiuscula === false) {
-      alertaSenha.innerText = "A senha deve conter pelo menos uma letra maiúscula.";
-    } else if (minuscula === false) {
-      alertaSenha.innerText = "A senha deve conter pelo menos uma letra minúscula.";
-    } else if (num === false) {
-      alertaSenha.innerText = "A senha deve conter pelo menos um número.";
-    } else if (especial === false) {
-      alertaSenha.innerText = "A senha deve conter pelo menos um caractere especial.";
-    } else if (tamanho === false) {
-      alertaSenha.innerText = "A senha deve ter no mínimo 8 caracteres.";
-    } else {
-      alertaSenha.innerText = "Confere";
+    // validações para fortificar a senha inserção - 25/07/24
+    if (senha.length >= tamanho) {
+      aviso1.style.color = 'green';
+    }
+    if (maiuscula) {
+      aviso2.style.color = 'green';
+    }
+    if (minuscula) {
+      aviso3.style.color = 'green';
+    }
+    if (num) {
+      aviso4.style.color = 'green';
+    }
+    if (especial) {
+      aviso5.style.color = 'green';
     }
   }
 
-  //a cada vez que a input tiver uma mudança, ele chama a função verificar - inserção 27/07/24  
-  ConfSenha.addEventListener('input', verificar)
+
+  //a cada vez que a input tiver uma mudança, ele chama a função verificar - inserção 25/07/24  
+  VerificarSenha.addEventListener('input', verificar)
 
 
-  function cadastrar() {
-    // declarando variáveis para o cadastro inserção 12/06/24
+  function cadastrar(resposta) {
+    // declarando variáveis para o cadastro alteração 26/07/24
     let nomeCad = nome_input.value;
+    let sobrenomeCad = sobrenome_input.value;
     let emailCad = email_input.value;
     let senhaCad = senha_input.value;
-    let confirmacaosenhaCad = confirmacao_senha_input.value;
 
-    // verificações para o cadastro, vendo se os campos estão preechidos inserção 27/07/24
-    if (
-      nomeCad == "" ||
-      emailCad == "" ||
-      senhaCad == "" ||
-      confirmacaosenhaCad == ""
-    ) {
-      alertaSenha.innerText = "preencha os campos corretamente"
-    } else {
 
-      if (verificarSenha() == true) {
-
-      }
-
+    if (resposta == 1) {
 
       // Enviando o valor da nova input
       fetch("/usuarios/cadastrar", {
@@ -193,9 +343,9 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-          // crie um atributo que recebe o valor recuperado aqui
-          // Agora vá para o arquivo routes/usuario.js
+         // dados vindos do html para serem enviados ao controller - alterçao 26/07/24
           nomeServer: nomeCad,
+          sobrenomeServer: sobrenomeCad,
           emailServer: emailCad,
           senhaServer: senhaCad,
         }),
@@ -205,25 +355,26 @@
 
           if (resposta.ok) {
             alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
-            aguardarCadastro();
+            // aguardarCadastro();
 
             setTimeout(() => {
               window.location = "login.html";
             }, "2000");
 
-            limparFormulario();
-            finalizarAguardar();
+            // limparFormulario();
+            // finalizarAguardar();
           } else {
             throw "Houve um erro ao tentar realizar o cadastro!";
           }
         })
         .catch(function (resposta) {
           console.log(`#ERRO: ${resposta}`);
-          finalizarAguardar();
+          // finalizarAguardar();
         });
 
       return false;
     }
   }
+
 
 </script>
