Inserção - 02/08/24 - Foi adicionado trabalho verificações de input no login além de uma nova tabela para a interação com o site, onde o usuário pode fazer uma avaliação para o site, e verificações para conferir se o usuário já realizou uma avaliação

--- a/Public/dashboard/metricas.html
+++ b/Public/dashboard/metricas.html
@@ -14,7 +14,7 @@
 <body onload="exibirGraficos()">
 
     <nav id="navbar">
-        <a onclick="limparSessaohome()" href="../dashboard/dashSite.html"><img id="logo"
+        <a onclick="limparSessao()" href="../dashboard/dashSite.html"><img id="logo"
                 src="../assets/index/LogoBlack.png" alt="LogoBlack"></a>
         <ul>
             <li class="dropdown"><a>Fotografia</a>
