--- a/Public/index.html
+++ b/Public/index.html
@@ -17,9 +17,9 @@
 
 <body>
   <div class="fundoImg">
-    <div class="box">
+    <!-- <div class="box">
       <img src="assets/index/LogoEntrada.png">
-    </div>
+    </div> -->
   </div>
   <nav id="navbar">
     <img src="assets/index/LogoNavBar.png">
