--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -64,7 +64,11 @@
         <h3>Primeiro acesso, insira os dados:</h3>
         <div>
 
-          <input id="senha_input" placeholder="Senha *" type="text">
+          <input id="senha_input" placeholder="Senha *" type="password">
+          <button onclick="exibir(1)" id="senhasBtn1"><img class="senhas1"
+              src="./assets/cadastro/olhoAberto.png" alt="Olho da Senha"></button>
+          <button onclick="exibir(2)" id="senhasBtn2"><img class="senhas2" src="./assets/cadastro/olhoRisco.png"
+              alt="Olho da Senha"></button>
           <p id="alerta5" class="alerta"></p>
         </div>
         <div class="verificacao">
@@ -93,7 +97,11 @@
         </div>
         <div>
 
-          <input id="confirmacao_senha_input" placeholder="Confirme sua Senha *" type="text">
+          <input id="confirmacao_senha_input" placeholder="Confirme sua Senha *" type="password">
+          <button onclick="exibir(3)" id="senhasBtn3"><img class="senhas1"
+              src="./assets/cadastro/olhoAberto.png" alt="Olho da Senha"></button>
+          <button onclick="exibir(4)" id="senhasBtn4"><img class="senhas2" src="./assets/cadastro/olhoRisco.png"
+              alt="Olho da Senha"></button>
           <p id="alerta6" class="alerta"></p>
 
         </div>
@@ -103,6 +111,13 @@
         </div>
       </div>
     </div>
+
+    <div class="confirmacao">
+      <img src="./assets/cadastro/icons8-certo.gif" alt="">
+      <h2>Cadastro realizado com sucesso!</h2>
+      <span>Redirecionando para Login...</span>
+    </div>
+
   </div>
 
 </body>
@@ -285,6 +300,36 @@
 
   }
 
+
+  function exibir(resposta) {
+
+    if (resposta == 1) {
+
+      document.getElementById('senhasBtn1').style.display = 'none'
+      document.getElementById('senhasBtn2').style.display = 'flex'
+      document.getElementById('senha_input').type = 'text'
+
+    } else if (resposta == 2) {
+
+      document.getElementById('senhasBtn2').style.display = 'none'
+      document.getElementById('senhasBtn1').style.display = 'flex'
+      document.getElementById('senha_input').type = 'password'
+    } else if (resposta == 3) {
+
+      document.getElementById('senhasBtn3').style.display = 'none'
+      document.getElementById('senhasBtn4').style.display = 'flex'
+      document.getElementById('confirmacao_senha_input').type = 'text'
+
+    } else if (resposta == 4) {
+
+      document.getElementById('senhasBtn4').style.display = 'none'
+      document.getElementById('senhasBtn3').style.display = 'flex'
+      document.getElementById('confirmacao_senha_input').type = 'password'
+
+    }
+
+  }
+
   let ax = 0
   // declarando a variavel para pegar o elemento em HTML - inserção 25/07/24
   let VerificarSenha = document.getElementById('senha_input');
@@ -320,19 +365,18 @@
       aviso5.style.color = 'green';
     }
   }
-
-
+  
   //a cada vez que a input tiver uma mudança, ele chama a função verificar - inserção 25/07/24  
   VerificarSenha.addEventListener('input', verificar)
 
 
   function cadastrar(resposta) {
-    // declarando variáveis para o cadastro alteração 26/07/24
+    // declarando variáveis para o cadastro alteração 02/08/24
     let nomeCad = nome_input.value;
     let sobrenomeCad = sobrenome_input.value;
     let emailCad = email_input.value;
     let senhaCad = senha_input.value;
-
+    let avaliacao = 'false'
 
     if (resposta == 1) {
 
@@ -343,33 +387,31 @@
           "Content-Type": "application/json",
         },
         body: JSON.stringify({
-         // dados vindos do html para serem enviados ao controller - alterçao 26/07/24
+          // dados vindos do html para serem enviados ao controller - alterçao 26/07/24
           nomeServer: nomeCad,
           sobrenomeServer: sobrenomeCad,
           emailServer: emailCad,
           senhaServer: senhaCad,
+          avaliacaoServer: avaliacao
         }),
       })
         .then(function (resposta) {
           console.log("resposta: ", resposta);
 
           if (resposta.ok) {
-            alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
-            // aguardarCadastro();
-
+           
+            document.querySelector('.confirmacao').style.display = 'flex';
             setTimeout(() => {
               window.location = "login.html";
-            }, "2000");
+            }, "1500");
 
-            // limparFormulario();
-            // finalizarAguardar();
           } else {
             throw "Houve um erro ao tentar realizar o cadastro!";
           }
         })
         .catch(function (resposta) {
           console.log(`#ERRO: ${resposta}`);
-          // finalizarAguardar();
+
         });
 
       return false;
